--- a/AAA._Python._Decorators.ipynb
+++ b/AAA._Python._Decorators.ipynb
@@ -1,3 +1,4 @@
+
 {
  "cells": [
   {
@@ -12,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2c2dc3b0",
    "metadata": {},
    "outputs": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "0ce62055",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "302f574f",
    "metadata": {},
    "outputs": [
@@ -62,7 +63,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "d08c53b4",
    "metadata": {},
    "outputs": [],
@@ -107,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0686c787",
+   "execution_count": 20,
+   "id": "b351fd6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2f447e2",
+   "execution_count": 21,
+   "id": "eb28dca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "732073b9",
    "metadata": {},
    "outputs": [],
@@ -136,22 +137,23 @@
     "\n",
     "def my_write(string_text):\n",
     "    new_text = str(f'[{str(today)}]: '+ string_text)\n",
-    "    original_write(new_text)\n",
+    "    if string_text != '\\n':\n",
+    "        original_write(new_text)\n",
     "\n",
     "sys.stdout.write = my_write"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "61e1f5c1",
+   "execution_count": 23,
+   "id": "8933912f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-12-15 23:28:55.014632]: 1, 2, 3[2021-12-15 23:28:55.014632]: \n"
+      "[2021-12-16 10:10:25.249459]: 1, 2, 3"
      ]
     }
    ],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "37617332",
    "metadata": {},
    "outputs": [],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "5804423b",
    "metadata": {},
    "outputs": [],
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "f43373a5",
    "metadata": {},
    "outputs": [],
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "6a2283db",
    "metadata": {},
    "outputs": [
@@ -234,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-12-15 23:28:55.014632]: Hello, Nikita!\n"
+      "[2021-12-16 10:10:25.249459]: Hello, Nikita!\n"
      ]
     }
    ],
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "de733186",
    "metadata": {},
    "outputs": [],
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "37e01742",
    "metadata": {},
    "outputs": [],
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "e892f124",
    "metadata": {},
    "outputs": [
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "ac06c89e",
    "metadata": {},
    "outputs": [],
