--- a/AAA._Python._Decorators.ipynb
+++ b/AAA._Python._Decorators.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -13,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "2c2dc3b0",
    "metadata": {},
    "outputs": [
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "0ce62055",
    "metadata": {},
    "outputs": [],
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "302f574f",
    "metadata": {},
    "outputs": [
@@ -63,7 +62,7 @@
        "3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "d08c53b4",
    "metadata": {},
    "outputs": [],
@@ -108,8 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b351fd6a",
+   "execution_count": 5,
+   "id": "cc8362f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "eb28dca0",
+   "execution_count": 6,
+   "id": "dc0a8081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "732073b9",
    "metadata": {},
    "outputs": [],
@@ -136,7 +135,7 @@
     "original_write = sys.stdout.write\n",
     "\n",
     "def my_write(string_text):\n",
-    "    new_text = str(f'[{str(today)}]: '+ string_text)\n",
+    "    new_text = f'[{str(today)}]: {string_text}' \n",
     "    if string_text != '\\n':\n",
     "        original_write(new_text)\n",
     "\n",
@@ -145,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8933912f",
+   "execution_count": 11,
+   "id": "9d81c7b4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-12-16 10:10:25.249459]: 1, 2, 3"
+      "[2021-12-16 10:35:21.474990]: 1, 2, 3"
      ]
     }
    ],
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "37617332",
    "metadata": {},
    "outputs": [],
@@ -201,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "5804423b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def timed_output(function):\n",
     "    def my_write(string_text):\n",
-    "        new_text = str(f'[{str(today)}]: ')\n",
+    "        new_text = f'[{str(today)}]: '\n",
     "        original_write(new_text)\n",
     "        function(string_text)\n",
     "    return my_write"
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "f43373a5",
    "metadata": {},
    "outputs": [],
@@ -228,7 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "13bf35cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "6a2283db",
    "metadata": {},
    "outputs": [
@@ -236,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-12-16 10:10:25.249459]: Hello, Nikita!\n"
+      "[2021-12-16 10:35:21.474990]: Hello, Nikita!\n"
      ]
     }
    ],
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "de733186",
    "metadata": {},
    "outputs": [],
@@ -281,9 +288,9 @@
     "            original = sys.stdout\n",
     "            out = open(filepath, 'w')\n",
     "            sys.stdout = out\n",
-    "            sys.stdout = original\n",
     "            function()\n",
     "            out.close()\n",
+    "            sys.stdout = original\n",
     "        return wrap_inner\n",
     "    return wrapper_outer\n",
     "\n"
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "37e01742",
    "metadata": {},
    "outputs": [],
@@ -306,33 +313,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "e892f124",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 \n",
-      "1 4 9 16 25 36 49 64 81 100 121 144 169 196 225 256 289 324 361 \n",
-      "1 8 27 64 125 216 343 512 729 1000 1331 1728 2197 2744 3375 4096 4913 5832 6859 \n",
-      "1 16 81 256 625 1296 2401 4096 6561 10000 14641 20736 28561 38416 50625 65536 83521 104976 130321 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calculate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "ac06c89e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 \r\n",
+      "1 4 9 16 25 36 49 64 81 100 121 144 169 196 225 256 289 324 361 \r\n",
+      "1 8 27 64 125 216 343 512 729 1000 1331 1728 2197 2744 3375 4096 4913 5832 6859 \r\n",
+      "1 16 81 256 625 1296 2401 4096 6561 10000 14641 20736 28561 38416 50625 65536 83521 104976 130321 \r\n"
+     ]
+    }
+   ],
    "source": [
-    "%cat function_output.txt"
+    "!cat function_output.txt"
    ]
   },
   {
